fix: spacings and font

--- a/pages/2nd page/assets/css/style.css
+++ b/pages/2nd page/assets/css/style.css
@@ -5,6 +5,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  
 }
 
 .sheader-2 {
@@ -125,10 +126,9 @@ body {
   background-repeat: no-repeat;
   background-size: 50%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  flex-direction: column;
-  height: 150vh;
+  padding: 20px;
+  height: 50vh;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   
 }
@@ -141,17 +141,20 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(207, 190, 190, 0.4);
+  background-color: rgba(102, 94, 94, 0.678);
   z-index: 1;
 }
 
 .overlay h2 {
   position: relative;
-  z-index: 3;
+  z-index: 2;
   font-size: 80px;
-  margin-top: -290px;
-  margin-left: 150px;
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(248, 245, 245);
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
 
 }
 
@@ -159,33 +162,45 @@ body {
   position: relative;
   z-index: 2;
   font-size: 20px;
-  background-color: #855309;
+  color: white;
+  background-color: #201D1D;
   border-radius: 10px;
   text-align: center;
-  width: 1000px;
-  height: auto;
   padding: 20px;
-  max-width: 40%;
+  max-width: 50%;
+  max-height: auto;
   margin: 0 auto;
-  margin-left: -200px;
+  
 }
 
 .text2 p {
   position: relative;
   z-index: 2;
   font-size: 20px;
-  background-color: #855309;
+  color: white;
+  background-color: #201D1D;
   border-radius: 10px;
   text-align: center;
-  width: 1000px;
-  height: auto;
   padding: 20px;
-  max-width: 40%;
+  max-width: 50%;
   margin: 0 auto;
-  margin-left: 500px;
+  
   
 }
 
+.text3 p {
+  position: relative;
+  z-index: 2;
+  font-size: 20px;
+  color: white;
+  background-color: #201D1D;
+  border-radius: 10px;
+  text-align: center;
+  padding: 20px;
+  max-width: 50%;
+  margin: 0 auto;
+  
+}
 
 
 .image1 {
